# envy

./: Cargo.toml  README.md
.zed/: settings.json
envy/: Cargo.toml
envy-designer/: Cargo.toml
envy-designer/src/: copy_texture.wgsl  file.rs  main.rs  resource_viewer.rs  tree.rs  tree_viewer.rs  wgpu_backend.rs  widgets.rs
envy-designer/src/shaders/: constant.wgsl
envy-designer/src/widgets/: animator.rs  layout_renderer.rs  resource_viewer.rs
envy-designer/src/widgets/layout_renderer/: pipeline.rs  shader.wgsl
envy-wgpu/: Cargo.toml
envy-wgpu/src/: lib.rs
envy-wgpu/src/shaders/: constant.wgsl  texture.wgsl
envy/src/: animations.rs  asset.rs  backend.rs  lib.rs  node.rs  template.rs  tree.rs
envy/src/node/: image.rs  sublayout.rs  text.rs
