[package]
name = "envy-designer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.3", features = ["wgpu"] }
egui = "0.32.3"
egui-wgpu = "0.32.3"
wgpu = "25"

envy = { path = "../envy" }
envy-wgpu = { path = "../envy-wgpu" }
parking_lot = "0.12.4"
egui_dock = "0.17.0"
env_logger = "0.11.8"
egui_ltreeview = "0.5.3"
camino = "1.2.0"
glam = "0.30.7"
rfd = "0.15.4"
