[package]
name = "envy-wgpu"
version = "0.1.0"
edition.workspace = true

[dependencies]
bytemuck = { version = "1.23.2", features = ["derive"] }
camino = "1.1.11"
cosmic-text = "0.14.2"
envy = { path = "../envy" }
glam = { version = "0.30.5", features = ["bytemuck"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
indexmap = "2.11.0"
lyon = "1.0.1"
wgpu = "25"

[features]
default = ["asset"]
asset = ["envy/asset"]
