[package]
name = "envy-wgpu"
version = "0.1.0"
edition.workspace = true

[dependencies]
bitvec = "1.0.1"
bytemuck = { version = "1.23.2", features = ["derive"] }
camino = "1.1.11"
cosmic-text = "0.14.2"
envy = { path = "../envy" }
glam = { version = "0.30.5", features = ["bytemuck"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
indexmap = "2.11.0"
lyon = "1.0.1"
wgpu_25 = { package = "wgpu", version = "25", optional = true }
wgpu_26 = { package = "wgpu", version = "26", optional = true }

[features]
default = ["asset", "wgpu_25"]
asset = ["envy/asset"]
