[package]
name = "envy"
version = "0.2.0"
edition.workspace = true

[dependencies]
bincode = { version = "2.0.1", optional = true }
bytemuck = { version = "1.23.2", features = ["derive"] }
camino = "1.1.11"
glam = { version = "0.30.5", features = ["bytemuck", "serde"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = ["asset"]
asset = ["bincode"]
unsend = []
